# seismic-damage-segmentation

./: .gitignore  README.md  experiment_proposal.md  pyproject.toml  train.py
conf/: config.yaml
earthquake_segmentation/: __init__.py  dataset.py  losses.py  model.py  train.py  utils.py  visualize.py
earthquake_segmentation/models/: build_model.py  conditional_unet.py
earthquake_segmentation/visualizations/: visualize_dataset.py  visualize_images.py
scripts/: train.py
scripts/visualizations/: visualize_dataset.py  visualize_images.py
src/earthquake_segmentation/: __init__.py  building_metrics.py  dataset.py  losses.py  training_loop.py  utils.py
src/earthquake_segmentation/models/: build_model.py  conditional_deeplabv3plus.py  conditional_unet.py  conditional_unetplusplus.py
src/earthquake_segmentation/visualizations/: visualize_dataset.py
tests/: test_dataset.py  test_losses.py
