[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-segmentation"
version = "0.1.0"
description = "Segmentation pipeline for earthquake damage prediction"
readme = "README.md"
requires-python = ">=3.8"

# dependencies
dependencies = [
  "torch==2.7.1+cu128",
  "torchvision==0.22.1+cu128",
  "rasterio==1.4.3",
  "numpy==2.1.2",
  "Pillow==11.0.0",
  "tqdm==4.67.1",
  "pandas==2.3.0",
  "wandb==0.21.0",
  "torchmetrics==1.7.4",
  "scikit-learn==1.7.0",
  "click==8.2.1",
  "hydra-core==1.3.2",
  "segmentation-models-pytorch==0.5.0",
  "albumentations==2.0.8",
  "matplotlib==3.10.3",
  "black==25.1.0",
]

[tool.setuptools.packages.find]
include = ["earthquake_segmentation*"]
