[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "seismic-damage-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "black>=25.1.0",
    "click>=8.2.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/earthquake_segmentation"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]